Fixed navbar partitions & behavior on smaller screens

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -244,10 +244,13 @@ select:focus {
   text-decoration: underline;
 }
 
-@media (max-width: 550px) {
+@media (max-width: 750px) {
   #header,
   #nav {
     text-align: center;
+  }
+  #header .column {
+    width: 100%;
   }
 }
 
